--- a/scss/_bio.scss
+++ b/scss/_bio.scss
@@ -13,6 +13,7 @@
         display: grid;
         margin-left: 10%;
         margin-right: 10%;
+        margin-bottom: 15%;
         grid-template-columns: 25% 25% 25% 25%;
         grid-template-rows: 20% 20% 20% 20% 20%;
         grid-gap: 10px;
@@ -58,4 +59,70 @@
         height: 100%;
     }
 }
-
+/*CAPTIONS BIO GRID*/
+figure.figurefx{
+    width: 100%;
+    height:100%;
+    padding: 0;
+    display: block;
+    position: relative;
+    overflow: hidden; /* hide overflowing elements by default */
+    figcaption{
+        position: absolute;
+        display: block;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        text-align: center;
+        background: white;
+        padding: 15px;
+        z-index: 100;
+        width: 100%;
+        max-height: 100%;
+        overflow: hidden;
+        top: 50%;
+        left: 0;
+        -moz-transform: translate3d(-100%, -50%, 0); /* position caption outside layout horizontally and centered vertically */
+        -webkit-transform: translate3d(-100%, -50%, 0);
+        transform: translate3d(-100%, -50%, 0);
+        opacity: 0;
+        -moz-transition: all 0.5s;
+        -webkit-transition: all 0.5s;
+        transition: all 0.5s;
+        & a{
+            text-decoration: none;
+        }
+    }
+}
+/*EFECTO PUSHUP BIO GRID*/
+figure.pushup{
+    img {
+        -moz-transform: translate3d(0, 0, 0);
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+        -moz-transition: all 0.5s;
+        -webkit-transition: all 0.5s;
+        transition: all 0.5s;
+    }
+    figcaption {
+        top: 100%;
+        opacity: 1;
+        -moz-transform: translate3d(0, 0, 0);
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+    &:hover img {
+        -moz-transform: translate3d(0, -20px, 0); /* move image up vertically a bit for parallax effect */
+        -webkit-transform: translate3d(0, -20px, 0);
+        transform: translate3d(0, -20px, 0);
+        opacity: .5;
+    }
+    &:hover figcaption{
+        -moz-transform: translate3d(0, -100%, 0); /* move caption up vertically to fully reveal caption */
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
+        -moz-transition: all 0.5s;
+        -webkit-transition: all 0.5s;
+        transition: all 0.5s;
+    }
+}
