--- a/scss/_bio.scss
+++ b/scss/_bio.scss
@@ -7,6 +7,14 @@
         text-align: left;
     }
 }
+.texto-en-bloque-integrantes{
+    margin-left: 10%;
+    margin-right: 10%;
+    font-size: $textobody;
+    text-align: center;
+    margin-top: -3rem;
+    margin-bottom: 2rem;
+}
 /*GRID BIO*/
 .seccion-integrantes{
     .main{
